--- a/ansible/roles/install-configure-portainer/templates/traefik.yml.j2
+++ b/ansible/roles/install-configure-portainer/templates/traefik.yml.j2
@@ -1,5 +1,5 @@
 global:
-  checkNewVersion: true
+  checkNewVersion: false
   sendAnonymousUsage: false
 
 api:
@@ -37,7 +37,7 @@ certificatesResolvers:
 
 providers:
   docker:
-    exposedByDefault: false # Default is true
+    exposedByDefault: false 
   file:
     directory: /etc/traefik
     watch: true
